--- a/src/components/Forms/Input.css
+++ b/src/components/Forms/Input.css
@@ -19,3 +19,13 @@
 .name-input:focus {
   outline: none;
 }
+
+.verification-input {
+  background-color: #121818;
+  color: #fff;
+  border: none;
+}
+
+.verification-input:focus {
+  outline: none;
+}
