--- a/src/components/Forms/FormButton.css
+++ b/src/components/Forms/FormButton.css
@@ -11,4 +11,22 @@
   font-weight: 700;
   border: none;
   font-family: "Raleway", sans-serif;
+  margin-top: 150px;
+}
+
+.empty-form-button {
+  width: 342px;
+  height: 64px;
+  flex-shrink: 0;
+  border-radius: 30px;
+  background: #1e2424;
+  color: white;
+  /* box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.33); */
+  backdrop-filter: blur(15px);
+  font-size: 20px;
+  font-weight: 700;
+  border: none;
+  font-family: "Raleway", sans-serif;
+  margin-top: 150px;
+  opacity: 0.33;
 }
