--- a/src/components/Forms/Input.css
+++ b/src/components/Forms/Input.css
@@ -14,6 +14,7 @@
   border: none;
   text-align: center;
   font-size: 32px;
+  margin-top: 200px;
 }
 
 .name-input:focus {
@@ -24,6 +25,8 @@
   background-color: #121818;
   color: #fff;
   border: none;
+  font-size: 20px;
+  margin-top: 10px;
 }
 
 .verification-input:focus {
