--- a/src/components/Forms/PhoneNumber.css
+++ b/src/components/Forms/PhoneNumber.css
@@ -43,6 +43,10 @@
   font-size: 20px;
 }
 
+.PhoneInputInput:focus {
+  outline: none;
+}
+
 /* Autres propriétés */
 
 .phone-block {
@@ -51,6 +55,8 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  width: 100vw;
+  margin-top: 120px;
 }
 
 .phone-block p {
