--- a/src/pages/SignUp.css
+++ b/src/pages/SignUp.css
@@ -1,7 +1,31 @@
-.sign-up-form {
+.container {
+  margin: 0 auto;
+  width: 390px;
+}
+
+.sign-up {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 30px;
+}
+
+.sign-up a {
+  color: white;
+  text-decoration: none;
+  margin-top: 50px;
+}
+
+.top-title {
+  margin-top: 30px;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.verification-block {
+  width: 100vw;
+  padding-left: 30px;
+  /* display: none; */
 }
