--- a/src/components/Forms/Input.css
+++ b/src/components/Forms/Input.css
@@ -32,3 +32,14 @@
 .verification-input:focus {
   outline: none;
 }
+
+.birthday-input {
+  height: 40px;
+  font-size: 20px;
+  background-color: #121818;
+  border: none;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  margin: 150px 20px 0 20px;
+}
