--- a/src/components/MainButton/MainButton.css
+++ b/src/components/MainButton/MainButton.css
@@ -4,6 +4,12 @@
   flex-shrink: 0;
   border-radius: 30px;
   background: #fff;
-  box-shadow: 0px 0px 30px 0px rgba(255, 255, 255, 0.33);
   backdrop-filter: blur(15px);
+  color: #121818;
+  font-family: "Raleway", sans-serif;
+  text-shadow: 0px 0px 25px #12181850;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
