css files done with template

--- a/src/components/Forms/Input.css
+++ b/src/components/Forms/Input.css
@@ -121,6 +121,9 @@ input[type="file"] {
 
 /* Desktop*/
 @media only screen and (min-width: 1350px) {
+  .verification-block {
+    margin-right: 44px;
+  }
 }
 
 /* Téléphone */
