--- a/src/components/Event/main/EventInfos.css
+++ b/src/components/Event/main/EventInfos.css
@@ -1,16 +1,26 @@
+@import "../../../assets/colors/colors.css";
+
 /**********************/
 /*     CONTAINER      */
 /**********************/
 
 /* MAIN INFOS */
 .hosts-infos {
-  position: absolute;
-  top: 445px;
-  left: 20px;
   display: flex;
   gap: 10px;
   align-items: center;
 }
+
+.host-title-container {
+  width: 100%;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  position: absolute;
+  background-color: aqua;
+}
+
 .hosts-avatar {
   display: flex;
   gap: 5px;
@@ -20,6 +30,7 @@
   display: flex;
   gap: 5px;
 }
+
 /* DETAILS */
 .event-details-container {
   display: flex;
@@ -27,6 +38,7 @@
   gap: 20px;
   padding: 15px;
 }
+
 .event-location-container {
   display: flex;
   gap: 5px;
@@ -47,25 +59,22 @@
   background-size: cover;
 }
 
-.linear-gradient {
-  background-image: linear-gradient(
-    to top,
-    rgba(0, 0, 0, 1),
-    rgba(0, 0, 0, 0.4),
-    rgba(0, 0, 0, 0),
-    rgba(0, 0, 0, 0)
-  );
-  width: 100%;
-  height: 490px;
-  z-index: 4;
+.event-blur-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-size: cover;
+  background-position: center;
+  filter: blur(120px); /* Blurs only the background */
+  z-index: -1;
 }
 
 /**********************/
 /*        TEXTE       */
 /**********************/
 .event-name {
-  position: absolute;
-  left: 20px;
   font-size: 32px;
   font-weight: bold;
 }
@@ -82,6 +91,7 @@
 }
 
 .event-button-map {
+  color: var(--green);
   font-weight: bold;
 }
 /**********************/
@@ -89,25 +99,44 @@
 /**********************/
 
 /* Desktop */
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1201px) {
   .event-infos-container {
     width: 1024px;
     display: flex;
-    background-color: aqua;
+    gap: 70px;
   }
 
   .event-picture {
-    width: 300px;
-    height: 490px;
+    width: 360px;
+    height: 450px;
     background-size: cover;
+  }
+
+  .event-main-infos-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+  }
+  .host-title-container {
+    padding: 0;
+  }
+  .event-details-container {
+    padding: 0;
+  }
+
+  .linear-gradient {
+    background-image: none;
+    width: 0;
+    height: 0;
+  }
+  .host-title-container {
+    position: relative;
   }
 }
 
 /* Tablette */
-@media only screen and (max-width: 1250px) {
-  .event-infos-container {
-    width: 100vw;
-  }
+@media only screen and (max-width: 1200px) {
 }
 
 /* Téléphone */
