--- a/src/components/Event/main/EventInfos.css
+++ b/src/components/Event/main/EventInfos.css
@@ -18,7 +18,7 @@
   flex-direction: column;
   gap: 10px;
   position: absolute;
-  background-color: aqua;
+  background-color: black;
 }
 
 .hosts-avatar {
