--- a/src/components/Forms/Poster.css
+++ b/src/components/Forms/Poster.css
@@ -1,25 +1,3 @@
-.poster-container {
-  position: relative;
-  display: inline-block;
-}
-
 .preview {
-  width: 100vw;
-  padding: 8px;
-  position: relative;
-}
-
-.icon-overlay {
-  position: absolute;
-  bottom: 24px;
-  right: 24px;
-  color: rgba(255, 255, 255, 0.8);
-  background-color: rgba(0, 0, 0, 0.5);
-  border-radius: 50%;
-  cursor: pointer;
-  height: 40px;
-  width: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  object-fit: cover;
 }
