--- a/src/components/OptionsEvent/Description.css
+++ b/src/components/OptionsEvent/Description.css
@@ -19,7 +19,9 @@
   border-radius: 8px;
   background-color: rgba(255, 255, 255, 0.1);
   padding: 8px;
+  font-family: "Raleway", sans-serif;
   color: white;
+  border: none;
 }
 
 .description-container textarea:focus {
