--- a/src/components/Event/feed/Feed.css
+++ b/src/components/Event/feed/Feed.css
@@ -7,5 +7,13 @@
 }
 
 /**********************/
-/*        TEXTE       */
+/*       TEXTE        */
 /**********************/
+
+/* Desktop */
+@media only screen and (min-width: 1024px) {
+  .feed-container {
+    flex: 1;
+    padding: 0 50px;
+  }
+}
