--- a/src/components/Event/main/rsvp/RsvpChoice.css
+++ b/src/components/Event/main/rsvp/RsvpChoice.css
@@ -3,12 +3,32 @@
 /**********************/
 .rsvp-choice-container {
   display: flex;
-  gap: 20px;
+  flex-direction: column;
+  align-items: center;
   position: absolute;
   z-index: 100;
 }
 
+.rsvp-choice-info {
+  width: 300px;
+  padding: 15px 5px;
+  margin-bottom: 20px;
+  border-radius: 8px;
+  background-color: rgb(0, 0, 0, 0.5);
+  text-align: center;
+  font-size: 14px;
+  line-height: 1.4rem;
+}
+
+.choices-container {
+  display: flex;
+  gap: 20px;
+}
+
 .response-choice-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 10px;
   border-radius: 50%;
   background-color: rgba(18, 24, 24);
@@ -20,17 +40,25 @@
 
 /* Desktop */
 @media only screen and (min-width: 1024px) {
+  .rsvp-choice-container {
+    top: 300px;
+    left: 63%;
+    transform: translateX(-50%);
+  }
 }
 
 /* Tablette */
-@media only screen and (max-width: 1200px) {
-}
-
-/* Téléphone */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1023px) {
   .rsvp-choice-container {
     left: 50%;
     top: 600px;
     transform: translateX(-50%);
+  }
+}
+
+/* Téléphone */
+@media only screen and (max-width: 768px) {
+  .rsvp-choice-info {
+    display: none;
   }
 }
