--- a/src/components/Forms/PhoneNumber.css
+++ b/src/components/Forms/PhoneNumber.css
@@ -16,7 +16,7 @@
 .PhoneInput {
   display: flex;
   background-color: #121818;
-  padding: 20px 30px;
+  padding: 20px 0;
 }
 
 .PhoneInputCountrySelect {
@@ -55,11 +55,11 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-
-  margin-top: 120px;
+  margin-top: 150px;
+  width: 100vw;
+  padding-left: 80px;
 }
 
 .phone-block p {
   padding-top: 25px;
-  padding-left: 30px;
 }
