--- a/src/components/Forms/Title.css
+++ b/src/components/Forms/Title.css
@@ -1,6 +1,6 @@
 h2 {
   font-size: 24px;
-  width: 244px;
-  /* font-weight: 700; */
   font-family: "Raleway", sans-serif;
+  text-align: center;
+  width: 280px;
 }
