--- a/src/pages/SignUpScreen.css
+++ b/src/pages/SignUpScreen.css
@@ -2,24 +2,65 @@
 /*     CONTAINER      */
 /**********************/
 
-.container {
-  margin: 0 auto;
-  width: 390px;
+.signup-container {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
 }
 
-.sign-up {
+.signup-header {
+  /* height: 60px; */
+  margin-top: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+}
+
+.signup-form-container {
+  display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
-.top-title {
-  margin-top: 30px;
+.signup-step1 {
   display: flex;
-  text-align: center;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
+  /* position: relative; */
+  height: calc(100vh - 40px);
+  gap: 120px;
+}
+
+.signup-step2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* position: relative; */
+  /* height: calc(100vh - 40px); */
+  gap: 30px;
+}
+
+.signup-step3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* position: relative; */
+  /* height: 100vh; */
+  height: calc(100vh - 40px);
+}
+
+.signup-step4 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  /* height: 100vh; */
+  height: calc(100vh - 40px);
 }
 
 .going-screen {
@@ -38,14 +79,20 @@
 /*        TEXTE       */
 /**********************/
 
-.sign-up a {
+.signup-step1 a {
   color: #fff;
   text-decoration: none;
-  margin-top: 50px;
+  /* margin-top: 129px; */
 }
 
-.sign-up h3 {
+.signup-step1 h3 {
   font-size: 12px;
+}
+
+.signup-header p {
+  position: absolute;
+  right: 15px;
+  font-size: 14px;
 }
 
 .avatar {
@@ -53,11 +100,16 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  margin-bottom: 160px;
+  position: relative;
 }
 
 .avatar p {
-  margin-top: 15px;
-  font-weight: bold;
+  padding-top: 20px;
+  /* margin-top: 25px; */
+  /* font-weight: bold; */
+  position: absolute;
+  top: 210px;
 }
 
 .going-screen p {
@@ -71,8 +123,9 @@
 
 /* Desktop*/
 @media only screen and (min-width: 1350px) {
-  .sign-up {
-    margin-top: 100px;
+  .signup-container {
+    width: 100%;
+    height: 100%;
   }
 }
 
