--- a/src/pages/SignUpScreen.css
+++ b/src/pages/SignUpScreen.css
@@ -58,7 +58,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  position: relative;
+  /* position: relative; */
   /* height: 100vh; */
   height: calc(100vh - 40px);
 }
@@ -124,8 +124,39 @@
 /* Desktop*/
 @media only screen and (min-width: 1350px) {
   .signup-container {
-    width: 100%;
-    height: 100%;
+    position: initial;
+  }
+  .signup-header {
+    margin-top: 100px;
+  }
+  .signup-step1 {
+    height: auto;
+    margin-top: 150px;
+  }
+  .back-button {
+    left: 780px;
+  }
+  .phone-block {
+    width: auto;
+    padding-left: 0;
+  }
+  .verification-block {
+    width: auto;
+    padding-left: 0;
+    margin-right: 45px;
+  }
+  .signup-step3 {
+    height: auto;
+  }
+  .birthday-input {
+    margin-bottom: 0;
+    margin-top: 150px;
+  }
+  .signup-header p {
+    right: 780px;
+  }
+  .signup-step4 {
+    height: auto;
   }
 }
 
