--- a/src/components/Event/main/rsvp/RsvpChoice.css
+++ b/src/components/Event/main/rsvp/RsvpChoice.css
@@ -7,6 +7,7 @@
   align-items: center;
   position: absolute;
   z-index: 100;
+  cursor: pointer;
 }
 
 .rsvp-choice-info {
@@ -44,6 +45,9 @@
     top: 300px;
     left: 63%;
     transform: translateX(-50%);
+  }
+  .response-choice-container:hover {
+    background-color: rgba(192, 192, 192, 0.5);
   }
 }
 
