--- a/src/components/Event/main/rsvp/ResponseIcon.css
+++ b/src/components/Event/main/rsvp/ResponseIcon.css
@@ -11,3 +11,14 @@
   padding: 5px;
   cursor: pointer;
 }
+
+/**********************/
+/*     RESPONSIVE     */
+/**********************/
+
+/* Desktop */
+@media only screen and (min-width: 1024px) {
+  .display-response-container:hover {
+    background-color: rgba(192, 192, 192, 0.5);
+  }
+}
