--- a/src/pages/SignUpScreen.css
+++ b/src/pages/SignUpScreen.css
@@ -28,7 +28,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* position: relative; */
   height: calc(100vh - 40px);
   gap: 120px;
 }
@@ -38,8 +37,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* position: relative; */
-  /* height: calc(100vh - 40px); */
   gap: 30px;
 }
 
@@ -106,8 +103,6 @@
 
 .avatar p {
   padding-top: 20px;
-  /* margin-top: 25px; */
-  /* font-weight: bold; */
   position: absolute;
   top: 210px;
 }
@@ -169,5 +164,48 @@
 }
 
 /* Téléphone */
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 768px) {
+  .signup-container {
+    position: initial;
+  }
+  .signup-header {
+    margin-top: 100px;
+  }
+  .signup-step1 {
+    height: auto;
+    margin-top: 150px;
+  }
+  .back-button {
+    left: 780px;
+  }
+  .phone-block {
+    width: auto;
+    padding-left: 0;
+  }
+  .verification-block {
+    width: auto;
+    padding-left: 0;
+    margin-right: 45px;
+  }
+  .signup-step3 {
+    height: auto;
+  }
+  .birthday-input {
+    margin-bottom: 0;
+    margin-top: 150px;
+  }
+  .signup-header p {
+    right: 780px;
+  }
+  .signup-step4 {
+    height: auto;
+  }
+  .file-input {
+    margin-bottom: 0;
+    margin-top: 150px;
+  }
+  .avatar {
+    margin-bottom: 0;
+    margin-top: 150px;
+  }
 }
