css create event flow

--- a/src/components/Forms/EventFormButton.css
+++ b/src/components/Forms/EventFormButton.css
@@ -1,3 +1,18 @@
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  position: fixed;
+  padding-bottom: 16px;
+  height: 80px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  margin-bottom: 0px;
+}
+
 .form-button {
   width: 342px;
   height: 64px;
