--- a/src/components/Forms/DateEvent.css
+++ b/src/components/Forms/DateEvent.css
@@ -3,15 +3,16 @@
 }
 
 .event-date-block {
-  position: relative;
+  /* position: relative; */
   width: 100%;
   height: auto;
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding: 0.75rem;
-  position: absolute;
-  top: 25%;
+  /* padding: 0.75rem; */
+  display: flex;
+  flex-direction: column;
+  /* top: 25%; */
 }
 
 .event-date-block label {
