--- a/src/pages/CreateEventScreen.css
+++ b/src/pages/CreateEventScreen.css
@@ -18,18 +18,39 @@
 .create-event-container {
   height: 100vh;
   width: 100vw;
-  position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* position: fixed; */
 }
 
 .form-header {
   height: 40px;
+  padding-top: 16px;
   display: flex;
+  position: fixed;
 }
 
 .form-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  background-color: green;
+  flex-grow: 1;
+  padding-bottom: 80px;
+  padding-top: 40px;
+}
+
+.form-container2 {
+  display: flex;
+  padding-top: 16px;
+  flex-direction: column;
+  align-items: center;
+  flex-grow: 1;
+  padding-bottom: 80px;
+  padding-top: 64px;
+  position: fixed;
 }
 
 .step1-screen {
@@ -37,31 +58,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: calc(100vh - 40px);
-  position: relative;
-}
-
-.address-input {
-  padding-left: 16px;
-  padding-right: 16px;
-  width: 100%;
-  box-sizing: border-box;
-  white-space: pre-wrap;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  word-break: break-word;
-  font-size: 16px;
-  line-height: 1.5;
-  font-family: "Raleway", sans-serif;
 }
 
 .title-event,
 .address-input {
   background-color: #ffffff00;
   border: none;
-  position: absolute;
-  top: 25%;
-  left: 0%;
   font-size: 24px;
   color: white;
   text-align: center;
@@ -76,8 +78,6 @@
 .empty-form-button {
   width: 342px;
   justify-content: center;
-  position: absolute;
-  bottom: 160px;
 }
 
 .step2-screen {
@@ -85,8 +85,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  padding: 0 16px;
+  width: 100vw;
+  height: auto;
+  gap: 32px;
 }
 
 .hours {
@@ -94,40 +95,20 @@
   display: none;
 }
 
-.step3-screen {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  padding: 0 16px;
-}
-
 .address-input:focus {
   outline: none;
 }
 
-.step4-screen {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-
 .browse-poster {
-  position: absolute;
-  background-color: #12181833;
-  padding: 16px;
+  padding-bottom: 16px;
   padding-left: 24px;
   padding-right: 24px;
-  bottom: 96px;
-  border-radius: 24px;
-  color: #e193ee;
+  color: white;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.33);
 }
 
 .step4-screen {
   display: flex;
-  align-items: center;
-  flex-direction: column;
 }
 
 .step5-screen {
@@ -137,7 +118,14 @@
   border-radius: 16px;
   margin: 8px;
   padding: 8px;
-  align-items: center;
+}
+.options-input {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  height: 480px;
+  padding-bottom: 16px;
+  overflow-y: auto;
 }
 
 .step5-screen > p {
@@ -202,26 +190,17 @@
   text-overflow: ellipsis;
 }
 
-.main-button {
-  width: 342px;
-  justify-content: center;
-  position: absolute;
-  bottom: 80px;
-}
-
 /**********************/
 /*       IMAGE        */
 /**********************/
 
 .poster-container {
   position: relative;
-  justify-self: flex-start;
 }
 
 .preview {
   width: 90vw;
   height: 112.5vw; /* height:width ratio = 9/16 = .5625  */
-  position: relative;
 }
 
 .icon-overlay {
@@ -252,5 +231,26 @@
 }
 
 /* Téléphone */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 389px) {
+  .preview {
+    width: 300px;
+    height: 375px; /* height:width ratio = 9/16 = .5625  */
+  }
+
+  .step5-screen {
+    display: flex;
+    flex-direction: column;
+    background-color: #12181833;
+    border-radius: 16px;
+    margin: 8px;
+    padding: 8px;
+  }
+
+  .options-input {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 360px;
+    overflow-y: auto;
+  }
 }
