--- a/src/components/Event/main/rsvp/RsvpChoice.css
+++ b/src/components/Event/main/rsvp/RsvpChoice.css
@@ -15,7 +15,7 @@
   padding: 15px 5px;
   margin-bottom: 20px;
   border-radius: 8px;
-  background-color: rgb(0, 0, 0, 0.5);
+  background-color: rgb(18, 24, 24, 0.25);
   text-align: center;
   font-size: 14px;
   line-height: 1.4rem;
@@ -32,7 +32,8 @@
   justify-content: center;
   padding: 10px;
   border-radius: 50%;
-  background-color: rgba(18, 24, 24);
+  background-color: rgb(18, 24, 24, 0.25);
+  border: 1.36px solid rgb(255, 255, 355, 0.2);
 }
 
 /**********************/
