--- a/src/components/Event/main/rsvp/RsvpChoice.css
+++ b/src/components/Event/main/rsvp/RsvpChoice.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: absolute;
+  position: fixed;
   z-index: 100;
   cursor: pointer;
 }
@@ -60,7 +60,7 @@
 @media only screen and (max-width: 1023px) {
   .rsvp-choice-container {
     left: 50%;
-    top: 600px;
+    top: 500px;
     transform: translateX(-50%);
   }
 }
