--- a/src/components/Event/feed/InputMessage.css
+++ b/src/components/Event/feed/InputMessage.css
@@ -1,8 +1,11 @@
 .input-message-container {
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  display: flex;
+  align-items: center;
 }
 
 .input-message {
+  font-family: "Raleway", sans-serif;
   margin-top: 10px;
   background-color: transparent;
   border: none;
@@ -12,4 +15,22 @@
   white-space: normal;
   padding-top: 20px;
   font-size: 16px;
+  background-color: "pink";
+}
+
+.send-icon-message {
+  margin-top: 15px;
+  border-radius: 50%;
+  padding: 5px;
+}
+/**********************/
+/*     RESPONSIVE     */
+/**********************/
+
+/* Desktop */
+@media only screen and (min-width: 1024px) {
+  .send-icon-message:hover {
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.1);
+  }
 }
