continue profile page

--- a/src/components/Forms/BackButton.css
+++ b/src/components/Forms/BackButton.css
@@ -3,6 +3,6 @@
   color: white;
   font-size: 20px;
   background-color: #ffffff00;
-  position: absolute;
-  left: 5px;
+  /* position: absolute;
+  left: 5px; */
 }
