--- a/src/components/Forms/DateEvent.css
+++ b/src/components/Forms/DateEvent.css
@@ -28,6 +28,7 @@
   text-align: center;
   font-family: "Raleway", sans-serif;
   font-size: 40px;
+  position: relative;
 }
 
 input[type="date"]::-webkit-calendar-picker-indicator {
