--- a/src/components/Forms/TimeEvent.css
+++ b/src/components/Forms/TimeEvent.css
@@ -16,6 +16,7 @@
   border: none;
   color: white;
   font-family: "Raleway", sans-serif;
+  position: relative;
 }
 
 input[type="time"]::-webkit-calendar-picker-indicator {
