--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -23,6 +23,9 @@
     width: 95vw;
   }
   .header-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 1024px;
   }
 
