profile page almost done

--- a/src/pages/Profile.css
+++ b/src/pages/Profile.css
@@ -1,5 +1,121 @@
-.veni-logo {
+@import url("../assets/colors/colors.css");
+
+.edit-veni-logo {
   font-size: 34px;
   font-weight: bold;
   /* color: var(--green); */
+}
+
+.event-card {
+  height: 600px;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  background-color: #2a2e2e;
+  border-radius: 20px;
+  flex-shrink: 0;
+}
+
+.event-card img {
+  height: 65%;
+  width: 300px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.event-container {
+  display: flex;
+  overflow: scroll;
+  gap: 20px;
+  margin-left: 30px;
+}
+
+.avatar-button {
+  background-color: #121818;
+  border: none;
+}
+
+.avatar-picture {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+}
+
+.profile-plus {
+  color: var(--green);
+  font-size: 25px;
+}
+
+.button-plus {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  background-color: #182825;
+  border: none;
+}
+
+.top-profile {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px 20px 0 30px;
+}
+
+.top-right {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.profile-title {
+  margin: 20px 30px;
+  font-size: 25px;
+}
+
+.profile-button {
+  margin: 20px 30px;
+}
+
+.profile-event {
+  margin: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.profile-event-title {
+  font-size: 30px;
+}
+
+.profile-event-date {
+  color: var(--green);
+  font-size: 18px;
+}
+
+/**********************/
+/*     CONTAINER      */
+/**********************/
+
+/**********************/
+/*       IMAGE        */
+/**********************/
+
+/**********************/
+/*        TEXTE       */
+/**********************/
+
+/**********************/
+/*     RESPONSIVE     */
+/**********************/
+
+/* Desktop*/
+@media only screen and (min-width: 1350px) {
+  .edit-veni-logo {
+    display: none;
+    /* visibility: hidden; */
+  }
+}
+
+/* Téléphone */
+@media only screen and (max-width: 768px) {
 }
