--- a/src/components/Event/photos/SharePhotosButton.css
+++ b/src/components/Event/photos/SharePhotosButton.css
@@ -1,3 +1,7 @@
+.share-button-container {
+  display: flex;
+  justify-content: center;
+}
 .share-my-photos-button {
   display: flex;
   justify-content: center;
@@ -8,6 +12,8 @@
   font-size: 20px;
   color: var(--black);
   background-color: var(--white);
+  margin: 20px 0;
+  width: 300px;
 }
 
 /* Desktop */
