change wording on signup/signin flow

--- a/src/pages/SignInScreen.css
+++ b/src/pages/SignInScreen.css
@@ -7,7 +7,7 @@
 .signin-header {
   margin-top: 20px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
