--- a/src/components/Forms/Input.css
+++ b/src/components/Forms/Input.css
@@ -83,6 +83,8 @@
   background-color: #121818;
   text-align: center;
   margin-bottom: 160px;
+  font-family: "Raleway", sans-serif;
+  font-size: 26px;
 }
 
 input[type="date"]::-webkit-calendar-picker-indicator {
