--- a/src/components/Event/main/EventInfos.css
+++ b/src/components/Event/main/EventInfos.css
@@ -13,6 +13,8 @@
   flex-direction: column;
   gap: 10px;
   position: absolute;
+  overflow: hidden;
+  word-wrap: break-word;
   /* background-color: black; */
 }
 
@@ -40,7 +42,7 @@
 /*        TEXTE       */
 /**********************/
 .event-name {
-  font-size: 32px;
+  font-size: 30px;
   font-weight: bold;
 }
 
