--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -258,4 +258,26 @@
   .home-button-container {
     margin-top: -220px;
   } */
+
+  /***********************/
+  /* SECTION 2-CONTAINER */
+  /***********************/
+
+  .home-section-messages img {
+    width: 50%;
+    margin-bottom: 40px;
+  }
+
+  #host-messages {
+    border-radius: 24px;
+  }
+
+  /***********************/
+  /* SECTION 3-CONTAINER */
+  /***********************/
+
+  .home-section-share img {
+    width: 50%;
+    margin-bottom: 16px;
+  }
 }
