--- a/src/pages/SignUpScreen.css
+++ b/src/pages/SignUpScreen.css
@@ -13,7 +13,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 16px 0 16px;
+  /* padding: 0 16px 0 16px; */
+  padding-right: 14px;
 }
 
 .signup-form-container {
